
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-eval"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "huggingface_hub",
    "datasets",

    # math extraction
    "sympy",
    "antlr4-python3-runtime==4.11",
]

[project.optional-dependencies]
beaker = [
    "beaker-py>=2.0", 
    "GitPython>=3.0,<4.0",
    "beaker-gantry"
]
vllm = [
    "vllm"
]
viz = [
    "matplotlib"
]
all = ["simple-eval[beaker,vllm,viz]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = []

[tool.uv]
python-preference = "only-managed"
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "setuptools"]
